fix: 增加图标，开源许可证

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "categories": [
     "Other"
   ],
+  "icon": "icon.png",
+  "publisher": "LiRenTech",
+  "author": {
+    "name": "LiRenTech"
+  },
+  "license": "MIT",
   "activationEvents": [
     "*"
   ],
