--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "name": "LiRenTech"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LiRenTech/vscode-little-clock.git"
+  },
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "main": "./dist/extension.js",
   "contributes": {
